--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <h1 class="titulo" >Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
                 <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e alura língua">
                 <a href="www.alura.com.br" class="container__botao" >Assine por 12x de R$120,00</a>
+                <ahref="www.alura.com.br" class="container__botao botao_secundario">Assinar somente Alura+</a>
+                <p> class="container__aviso"</p>
             </div>
         </section>
     </body>
