--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
         <meta charseet="UTF-8">
         <meta name="viewport" content="width=device-witdth, inicial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
         <section class="container principal">
-            <div>
-                <h1 class="titulo" >Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-                <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e alura língua">
+            <div class="container__caixa">
+                <h1 class="container__titulo" >Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+                <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e alura língua" class="container__imagem">
                 <a href="www.alura.com.br" class="container__botao" >Assine por 12x de R$120,00</a>
-                <ahref="www.alura.com.br" class="container__botao botao_secundario">Assinar somente Alura+</a>
-                <p> class="container__aviso"</p>
+                <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente Alura+</a>
+            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
             </div>
         </section>
     </body>
