--- a/index.html
+++ b/index.html
@@ -30,8 +30,18 @@
             <img src="img/Plataformas.png" alt="um monitor e um celular com o alura plus aberto" class="secundario__imagem">
             <div class="container__descricao">
                 <h2 class="descricao__titulo">Assista do seu jeito</h2>
-                <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+                <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos.
+                     Nossa seleção de cursos não para de crescer.</p>
             </div>
+        </section>
+        <section class="container__secundario">
+            <div class="container__descricao">
+                <p class="descricao__texto">
+                Só o Combo+ oferece Alura+ e Alura Lingua juntos para você ter acesso a cursos de diverasas
+                 áreas de tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+            </div>
+            <img src="img/Telas.png" alt="Tela do alura plus e do alura lingua" class="secundario__imagem2">
         </section>
     </body>
 
