--- a/index.html
+++ b/index.html
@@ -34,15 +34,37 @@
                      Nossa seleção de cursos não para de crescer.</p>
             </div>
         </section>
-        <section class="container__secundario">
+
+        <section class="container secundario">
             <div class="container__descricao">
                 <p class="descricao__texto">
-                Só o Combo+ oferece Alura+ e Alura Lingua juntos para você ter acesso a cursos de diverasas
-                 áreas de tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-                <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+                    Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
+                    tecnologia e aprender inglês ou espanhol, onde e como quiser.
+                </p>
+                <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
             </div>
-            <img src="img/Telas.png" alt="Tela do alura plus e do alura lingua" class="secundario__imagem2">
+            <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
         </section>
+    
+        <section class="dispositivos">
+            <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+            <ul class="dispositivos__lista">
+                <li>
+                    <img src="img/tv.png" alt="Ícone de televisão">
+                    <h3 class="lista__item">TV</h3>
+                </li>
+                <li>
+                    <img src="img/computador.png" alt="Ícone de computador">
+                    <h3 class="lista__item">Computador</h3>
+                </li>
+                <li>
+                    <img src="img/celular.png" alt="Ícone de celular">
+                    <h3 class="lista__item">Celular</h3>
+                </li>
+            </ul>
+        </section>
+    
+
     </body>
 
 </html>
